@@ -7,6 +7,7 @@ JmDNSImpl.openMulticastSocket() fails on AIX - ID: 2821919
 Service discovery takes about 6 s - FIX - ID: 2910895
 Update text field and receive text updates. - ID: 2349331
 Make listening interface and port configurable - ID: 3000610
+Add extra API to read protocol and domain - ID: 3000616
 
 CHANGELOG 5 April 2010 Pierre Frisch
 Rev the source code to 3.1.6
